--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-picker": "1.1.0",
+    "react-native-image-resizer": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
+    "react-native-share": "^4.1.0",
     "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
