--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
